# asteroids

./: .gitignore  README.md  back.sh  default.nix  front.sh  game.sh  gh-pages.sh  index.html  overrides.nix  reflex-platform.nix
back/: .ghc.environment.x86_64-linux-8.4.3  asteroids-back.cabal  cabal.project  ghcid.sh  serve.sh
back/app/: Main.hs
back/src/Asteroids/: Back.hs
front/: asteroids-front.cabal  build.sh  cabal.project  debug.sh  ghcid.sh
front/app/: Main.hs
front/src/Asteroids/: Frontend.hs
front/src/Asteroids/Frontend/: App.hs  Drawable.hs  Input.hs  Monad.hs  Render.hs  Style.hs  World.hs
front/src/Asteroids/Frontend/Render/: Material.hs  Polygon.hs
front/statics/: debug.html  index.html
front/statics/js/: all.min.js
game/: asteroids.cabal  cabal.project  ghcid.sh
game/src/Asteroids/: Game.hs  Util.hs
game/src/Asteroids/Game/: Asteroid.hs  Collision.hs  Entity.hs  Material.hs  Physics.hs  Player.hs  Random.hs  Rigid.hs  Shape.hs  Ship.hs  Transform.hs  World.hs
game/src/Asteroids/Game/Store/: Cache.hs
js/: all.min.js  pixi.min.js
matter/: ghcid.sh  matter.cabal
matter/src/Data/Physics/: Matter.hs
matter/src/Data/Physics/Matter/: Bodies.hs  Body.hs  Engine.hs  Events.hs  Plugin.hs  Vector.hs  World.hs
pixi/: .gitignore  ghcid.sh  pixi.cabal
pixi/src/Data/Graphics/: Pixi.hs
pixi/src/Data/Graphics/Pixi/: App.hs  Graphics.hs
splaton/: ghcid.sh  splaton.cabal
splaton/src/Data/: Splaton.hs
splaton/src/Data/Splaton/: Angle.hs  Approx.hs  Bounding.hs  Polygon.hs  Ray.hs  Transform.hs  Vector.hs
