name:                asteroids-front
version:             1.0.0.0
synopsis:            Frontend code that is compiled with GHCJS.
description:         See README.md
license:             MIT
license-file:        LICENSE
copyright:           2018 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Asteroids.Frontend
    Asteroids.Frontend.Style
  build-depends:
      base
    , asteroids
    , bytestring        >= 0.10     && < 0.11
    , clay              >= 0.13     && < 0.14
    , reflex            >= 0.5      && < 0.6
    , reflex-dom        >= 0.4      && < 0.5
    , text              >= 1.2      && < 1.3
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    CPP
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

executable asteroids-front
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , reflex
    , reflex-dom
    , asteroids-front
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
