name:                asteroids
version:             1.0.0.0
synopsis:            Shared game code between back and front.
description:         See README.md
license:             MIT
license-file:        LICENSE
copyright:           2018 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Asteroids.Util
    Asteroids.Game
    Asteroids.Game.Asteroid
    Asteroids.Game.Rigid
    Asteroids.Game.World
  build-depends:
      base
    , apecs             >= 0.7          && < 0.8
    , linear            >= 1.20         && < 1.21
    , safe              >= 0.3          && < 0.4
    , splaton           >= 0.1          && < 0.2
    , text              >= 1.2          && < 1.3
    , vector            >= 0.12         && < 0.13
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
