name:                matter
version:             0.1.0.0
synopsis:            GHCJS bindings to matter.js.
description:         See README.md
license:             MIT
license-file:        LICENSE
copyright:           2019 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  if impl(ghcjs -any)
    build-depends:
      ghcjs-base -any,
      ghcjs-prim -any,
      ghcjs-dom -any

  hs-source-dirs:      src
  exposed-modules:
    Data.Physics.Matter
    Data.Physics.Matter.Bodies
    Data.Physics.Matter.Body
    Data.Physics.Matter.Engine
    Data.Physics.Matter.World
  build-depends:
      base
    , jsaddle           >= 0.9          && < 0.10
    , text              >= 1.2          && < 1.3
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    CPP
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
