name:                splaton
version:             0.1.0.0
synopsis:            Geometry types and utils.
description:         See README.md
license:             MIT
license-file:        LICENSE
copyright:           2019 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -msse2
  exposed-modules:
    Data.Splaton
    Data.Splaton.Angle
    Data.Splaton.Approx
    Data.Splaton.Bounding
    Data.Splaton.Polygon
    Data.Splaton.Ray
    Data.Splaton.Transform
    Data.Splaton.Vector
  build-depends:
      base
    , linear            >= 1.20      && < 1.21
    , safe              >= 0.3       && < 0.4
    , vector            >= 0.12      && < 0.13
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
